test/grammar/types/union_ty/union_ty_err_1/stderr.golden
error[E2L23]: CompileError
  --> ${CWD}/main.k:14:7
   |
14 |     x.d = 1
   |       ^ Cannot add member 'd' to 'schemas ["A", "B", "C"]'
   |